--- a/week0/index.html
+++ b/week0/index.html
@@ -2,11 +2,7 @@
 <html>
 <head>
 	<title>hoi</title>
-	<style type="text/css">
-		img{
-			width: 100px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<h1>hello</h1>
